--- a/proyecto/src/index.html
+++ b/proyecto/src/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>EjemploClase</title>
-    <base href="/" />
+    <title>proyecto</title>
+    <base href="/">
 
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
 
